--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 ---
 layout: default
 ---
-
-<div class="home">
-  <!-- Begin MailChimp Signup Form -->
-  <h2>A weekly newsletter about Crystal Programming Language.</h2>
+{% contentfor head %}
   <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css" />
   <style type="text/css">
     #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
   </style>
+{% endcontentfor %}
+
+<div class="home">
+  <!-- Begin MailChimp Signup Form -->
+  <h2>A weekly newsletter about Crystal Programming Language.</h2>
   <div id="mc_embed_signup">
     <form action="//serdardogruyol.us11.list-manage.com/subscribe/post?u=d644228761eb9a81e877365cc&amp;id=764dae5f03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required />
         <label for="mce-EMAIL">Subscribe to Crystal Weekly</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required />
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;"><input type="text" name="b_d644228761eb9a81e877365cc_764dae5f03" tabindex="-1" value=""></div>
         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
