add link to RSS feed

--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@ layout: default
       </div>
     </form>
   </div>
+
+  <div id="rss_subscribe">
+    &hellip; or subscribe to <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">RSS/Atom feed</a>
+  </div>
 </div>
