Added latest issue link

--- a/index.html
+++ b/index.html
@@ -23,4 +23,8 @@ layout: default
   <div id="rss_subscribe">
     &hellip; or subscribe to <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">RSS/Atom feed</a>
   </div>
+  <hr>
+  <div id="latest_issues">
+    You can read the latest issue from <a href="http://eepurl.com/bAx8tv">here</a>
+  </div>
 </div>
