--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
     <div class="cw-height-16"></div>
     Crystal Weekly is a weekly newsletter about <a href="http://crystal-lang.org" class="cw-link" target="_blank">Crystal</a> Programming Language.
     <div class="cw-height-16"></div>
-    Curated by <a href="https://twitter.com/sdogruyol" class="cw-link" target="_blank">Serdar Doğruyol</a>. Crystal Weekly aims to bring the best resources,
+    Created by <a href="https://twitter.com/sdogruyol" class="cw-link" target="_blank">Serdar Doğruyol</a>. Crystal Weekly aims to bring the best resources,
     blog posts, community events and anything Crystal to your inboxes.
     <div class="cw-height-16"></div>
     The source code of this site is hosted on <a href="https://github.com/sdogruyol/crystal-weekly" class="cw-link" target="_blank">Github</a> and you
