Submit something via gh issue

--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@ layout: default
     <div class="cw-height-16"></div>
     Crystal Weekly is a weekly newsletter about <a href="http://crystal-lang.org" class="cw-link" target="_blank">Crystal</a> Programming Language.
     <div class="cw-height-16"></div>
-    Curated by <a href="https://twitter.com/sdogruyol" class="cw-link" target="_blank">Serdar Doğruyol</a>. Crystal Weekly aims to bring the best resources,
-    blog posts, community events and anything Crystal to your inboxes.
+    Curated by <a href="https://twitter.com/sdogruyol" class="cw-link" target="_blank">Serdar Doğruyol</a>. Crystal Weekly aims to bring the best resources, blog posts, community events and anything Crystal to your inboxes.
     <div class="cw-height-16"></div>
-    The source code of this site is hosted on <a href="https://github.com/sdogruyol/crystal-weekly" class="cw-link" target="_blank">Github</a> and you
-    can contribute to it.
+    The source code of this site is hosted on <a href="https://github.com/sdogruyol/crystal-weekly" class="cw-link" target="_blank">Github</a> and you can contribute to it. If you'd like to submit something to be included in the next issue, open a <a href="https://github.com/sdogruyol/crystal-weekly/issues">github issue</a>.
   </div>
   <div class="cw-height-40"></div>
   <div class="wrap xl-auto xl-center xl-gutter-24">
